--- a/www/index.html
+++ b/www/index.html
@@ -178,7 +178,7 @@
     // ButtonAがクリックされた時の処理
     function btnAClick(e){
         active = true;
-        startTime = newData();
+        startTime = new Date();
         
     }
 
@@ -202,7 +202,7 @@
  
     // 繰り返し実行する処理
     function timer(){  
-      if (active) {
+      if (active　== true) {
         var time = parseInt( (new Date() - startTime)/1000 );
         var rest = period - time;
         $("#time").html("経過時間： " + time);
