minuteとsecondの角丸を実装

--- a/www/index.html
+++ b/www/index.html
@@ -179,6 +179,7 @@
     function btnAClick(e){
         active = true;
         startTime = new Date();
+        btnA color = blue;
         
     }
 
